--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 table, th, td {
     border: 1px solid black;
-    width:40%;
-    background-color: aquamarine;
+    width:30%;
+    background-color: rgb(211, 151, 223);
   }
   td{
-      width: 20%;
+      width: 15%;
   }
+  img {
+  width: 300px;
+  height: 300px;
+}
